@@ -100,20 +100,20 @@ gboolean           imsettings_request_reload                 (IMSettingsRequest 
 gboolean           imsettings_request_change_to              (IMSettingsRequest *imsettings,
                                                               const gchar       *module);
 
-gboolean imsettings_request_IMInfo_get_im_list_async(IMSettingsRequest                           *imsettings,
-                                                     com_redhat_imsettings_IMInfo_get_list_reply  callback,
-                                                     gpointer                                     user_data);
-gboolean imsettings_request_start_im_async          (IMSettingsRequest                           *imsettings,
-                                                     const gchar                                 *module,
-						     gboolean                                     update_xinputrc,
-                                                     com_redhat_imsettings_start_im_reply         callback,
-                                                     gpointer                                     user_data);
-gboolean imsettings_request_stop_im_async           (IMSettingsRequest                           *imsettings,
-                                                     const gchar                                 *module,
-						     gboolean                                     update_xinputrc,
-                                                     gboolean                                     force,
-                                                     com_redhat_imsettings_stop_im_reply          callback,
-                                                     gpointer                                     user_data);
+gboolean imsettings_request_get_im_list_async(IMSettingsRequest                           *imsettings,
+                                              com_redhat_imsettings_IMInfo_get_list_reply  callback,
+                                              gpointer                                     user_data);
+gboolean imsettings_request_start_im_async   (IMSettingsRequest                           *imsettings,
+                                              const gchar                                 *module,
+                                              gboolean                                     update_xinputrc,
+                                              com_redhat_imsettings_start_im_reply         callback,
+                                              gpointer                                     user_data);
+gboolean imsettings_request_stop_im_async    (IMSettingsRequest                           *imsettings,
+                                              const gchar                                 *module,
+                                              gboolean                                     update_xinputrc,
+                                              gboolean                                     force,
+                                              com_redhat_imsettings_stop_im_reply          callback,
+                                              gpointer                                     user_data);
 
 
 G_END_DECLS
